[tool.poetry]
name = "sfc-proj"
version = "0.1.0"
description = ""
authors = ["Matej Hornik <bachini256@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.5.1"
transformers = "^4.46.3"
tiktoken = "^0.8.0"
streamlit = "^1.40.2"
plotly = "^5.24.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
